--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,7 +272,7 @@ hr{
 
 
 #ourcheese-bg-img {
-    background: url('../assets/images/ourcheese-hero-opaque.webp');
+    background: url('/assets/images/ourcheese-hero-opaque.webp');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -292,6 +292,19 @@ hr{
 
 
 /*---------------------------------------------our-cheese-page--main-cheese*/
+
+
+/* If screen size is more than 600px wide, set the font-size of <div> to 20px */
+@media screen and (min-width: 600px) {
+    .cheese-thumbnail {
+    font-size: 20px;
+    margin-left: 20%;
+    margin-right: 20%
+    }
+    .cheese-intro-text p{
+        font-size: 20px;
+    }
+}
 
 .hero-cover-text h1 {
     font-family: Bangers, Raleway, sans-serif;
@@ -351,7 +364,7 @@ hr{
 
 
 .contact-image {
-    background-image: url("../assets/images/enquiry-fireworksimage.webp");
+    background-image: url("/assets/images/enquiry-fireworksimage.webp");
     background-repeat: no-repeat;
     background-size: cover;
     height: 450px;
