--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,7 +272,7 @@ hr{
 
 
 #ourcheese-bg-img {
-    background: url('/assets/images/ourcheese-hero-opaque.webp');
+    background: url('../images/ourcheese-hero-opaque.webp');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -364,7 +364,7 @@ hr{
 
 
 .contact-image {
-    background-image: url("/assets/images/enquiry-fireworksimage.webp");
+    background-image: url("../images/enquiry-fireworksimage.webp");
     background-repeat: no-repeat;
     background-size: cover;
     height: 450px;
