split p tags to incorp hr brks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,9 +235,8 @@ hr{
     color: rgb(232, 248, 10) ;
 }
 
-.footer-contact h4{
+.footer-contact{
     color:rgb(247, 172, 11);
-    font-family: bangers, sans-serif;
     margin-bottom: 0;
     
 }
@@ -250,11 +249,15 @@ hr{
 .footer-contact{
     text-align: center;
     color: rgb(247, 172, 11);
+
 }
 
 .footer-contact a{
     color: rgb(247, 172, 11);
-    text-decoration:none
+    text-decoration:none;
+    font-family: bangers, sans-serif;
+    font-size: 20px;
+    
 }
 
 .footer-contact a:hover{
@@ -263,6 +266,8 @@ hr{
 
 .footer-contact address{
     margin-bottom: 0;
+    font-family: raleway, sans-serif;
+    
 }
 
 
