change hero image to correct one

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body {
 /*---------------------------------------------Hero image*/
 #hero-image {
 
-    background-image: url('../images/cheddar-thumbnail.jpg');
+    background-image: url('../images/cheese-counter.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
